# cmake-gtest

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sample_library.h
test/sample_test/: CMakeLists.txt  main.cpp
